<resources>
    <string name="Continue">Continue</string>
    <string name="_4_8_434_reviews_28k_users">⭐ 4.8 (434 reviews) • 28K+ users</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about">About</string>
    <string name="about_cost_explanation">The current cost is the time and expertise to develop and improve the application. Your support allows me to dedicate my skills and passion to provide you with a unique experience.</string>
    <string name="about_dont_subscribe">Is the free version enough for you?</string>
    <string name="about_dont_subscribe_why">"If you only use the app sometimes, the free version is perfect for you! You can easily create and share videos.&lt;br/>&lt;br/> When should you get a subscription?&lt;br/> We suggest subscribing if one or more of these apply to you:&lt;br/>&lt;br/> * You regularly post islamic content.&lt;br/> * You want to remove the watermark from your videos.&lt;br/> * You need to use a video as a background instead of a picture.&lt;br/> * You want full control over customizing the display screen.&lt;br/> * You plan to share on all social media platforms in different sizes.&lt;br/> * Or, if you simply want to support the app's development and help us keep making it better ❤️."</string>
    <string name="about_free_app">Best 5 apps for montage the holy quran</string>
    <string name="about_free_site">Free sites to download high-quality images and videos! 🚀</string>
    <string name="about_free_site_desc">" &lt;b>&lt;font color=#F67280>Unsplash:&lt;/font>&lt;/b> A vast library of beautiful and free photographs.&lt;br>&lt;br> &lt;b>&lt;font color=#F67280>Pexels:&lt;/font>&lt;/b> Provides high-resolution photos and videos for commercial and personal use.&lt;br>&lt;br> &lt;b>&lt;font color=#F67280>Pixabay:&lt;/font>&lt;/b> Contains a large and diverse collection of images, illustrations, and videos.&lt;br>&lt;br> &lt;b>&lt;font color=#F67280>Videezy:&lt;/font>&lt;/b> Your destination for free high-quality video footage.&lt;br>&lt;br> Tip for the Muslim designer: When using these sites, search for keywords like nature, mosque, islamic, arabic, calligraphy, geometric patterns, and avoid images that may contain people in immodest clothing or symbols that conflict with Islamic values. "</string>
    <string name="about_help_body">" &lt;b>What are the benefits of a Premium subscription?&lt;/b>&lt;br/> A Premium subscription unlocks exclusive features like no watermarks,upload video and image, export videos in 16:9,1:1..., iPod screen edit, and gradient colors. Plus, it supports our ongoing development!&lt;br/>&lt;br/> &lt;b>How do I subscribe to NurMontage Premium?&lt;/b>&lt;br/> You can subscribe right from the app by going to Upgrade in the settings.&lt;br/>&lt;br/> &lt;b>How do I cancel my subscription?&lt;/b>&lt;br/> You can manage and cancel your subscription through your device's app store settings (Google Play subscriptions). Your Premium features will remain active until the end of your current billing cycle.&lt;br/>&lt;br/> &lt;b>What payment methods are accepted?&lt;/b>&lt;br/> Payments are securely processed through your device's app store (Google Play), which usually accepts major credit cards and other local payment options.&lt;br/>&lt;br/> &lt;b>Can I use the same subscription on a new phone or tablet?&lt;/b>&lt;br/> Yes, you can! Just sign in to Google Play on your new phone with the same Google account you used to subscribe. Then, go to the subscription page in our app, and it should automatically recognize your subscription and restore it.&lt;br/>&lt;br/> &lt;b>Who do I contact if I have issues?&lt;/b>&lt;br/> For any problems, suggestions, or subscription questions, please contact this email:&lt;br/> hazemourari08@gmail.com "</string>
    <string name="about_help_tittle">Questions ?</string>
    <string name="about_no_ads">"Assalamu alaykum , your bro hazem ourari, the developer of the karmous and Asaloun app. I don't rely on ads in all my apps because it is difficult to control what they display. There is what is haram in them, but there is also what is halal, and this application will be completely free."</string>
    <string name="about_question_1">Are you passionate about the growth of Islamic apps?</string>
    <string name="about_question_2">Do you appreciate creative ideas that serve the Islamic community?</string>
    <string name="about_question_3">Would you like to spread the Holy Quran easily?</string>
    <string name="add_bg">Add Background</string>
    <string name="add_bismilah">Include Bismillah</string>
    <string name="add_media">Done %s</string>
    <string name="after">After</string>
    <string name="all">All</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="animtion">Effect</string>
    <string name="app_name">NurMontage</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="applyall">ApplyAll</string>
    <string name="are_you_sure_to_delete_this_items">Do you want to delete these items?</string>
    <string name="are_you_sure_to_delete_this_work">Want to delete this work ?</string>
    <string name="are_you_sure_want_to_leave_this_work">Are you sure want to leave this work ?</string>
    <string name="audio">Audio</string>
    <string name="audio_cancel">Audio selection cancelled</string>
    <string name="before">Before</string>
    <string name="best_value">Best value - Save 69%</string>
    <string name="bg">Bg</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_collapse">Collapse the bottom sheet</string>
    <string name="bottomsheet_action_expand">Expand the bottom sheet</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="bottomsheet_drag_handle_clicked">Drag handle double-tapped</string>
    <string name="bottomsheet_drag_handle_content_description">Drag handle</string>
    <string name="btn_launch_billing">Support</string>
    <string name="call_notification_answer_action">Answer</string>
    <string name="call_notification_answer_video_action">Video</string>
    <string name="call_notification_decline_action">Decline</string>
    <string name="call_notification_hang_up_action">Hang Up</string>
    <string name="call_notification_incoming_text">Incoming call</string>
    <string name="call_notification_ongoing_text">Ongoing call</string>
    <string name="call_notification_screening_text">Screening an incoming call</string>
    <string name="cancel">Cancel</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="choice_bg">Choice Background</string>
    <string name="choice_screen_ipod">iPod screen selection</string>
    <string name="choose_your_preferred_language">Choose your preferred language</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="color">Color</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">"%1$s won't run without Google Play services, which are missing from your device."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">"%1$s won't run without Google Play services, which are not supported by your device."</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="confirm">Confirm</string>
    <string name="contact_us">Contact us</string>
    <string name="cut">Cut</string>
    <string name="delete">Delete</string>
    <string name="duplicate">Duplicate</string>
    <string name="edit">Edit</string>
    <string name="enjoying_the_app">Enjoying NurMontage?</string>
    <string name="exit">Exit...</string>
    <string name="font">Font</string>
    <string name="from_now">from now</string>
    <string name="from_the_start">from the start</string>
    <string name="icon">Icon</string>
    <string name="later">Not now</string>
    <string name="leave">Leave</string>
    <string name="moment_to_rate">Tap a star to rate it on the store.</string>
    <string name="msj_no_found_subscribe">"We couldn’t find an active subscription linked to your Google Play account.If you recently subscribed, please make sure you're signed in with the correct account."</string>
    <string name="no_thanks">No,Thanks</string>
    <string name="nothing_to_restore">Nothing to Restore</string>
    <string name="rate_now">Rate me ❤️</string>
    <string name="select_language">Select Language</string>
    <string name="until_now">until now</string>
    <string name="until_the_end">until the end</string>
</resources>