<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="#fff2f2f2" android:padding="16.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <hazem.nurmontage.videoquran.views.TextCustumFont android:textSize="18.0sp" android:textStyle="bold" android:textColor="@color/black" android:id="@id/tv_tittle" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="8.0dip" android:text="@string/enjoying_the_app" />
    <hazem.nurmontage.videoquran.views.TextCustumFont android:textColor="@color/black" android:id="@id/tv_subtittle" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="16.0dip" android:text="@string/moment_to_rate" />
    <hazem.nurmontage.videoquran.views.ButtonCustumFont android:textColor="@color/black" android:id="@id/rateButton" android:background="#ff2ecc71" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="8.0dip" android:text="@string/rate_now" />
    <hazem.nurmontage.videoquran.views.ButtonCustumFont android:textColor="@color/black" android:id="@id/laterButton" android:background="#ffcccccc" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="8.0dip" android:text="@string/later" />
    <hazem.nurmontage.videoquran.views.ButtonCustumFont android:textColor="@color/black" android:id="@id/neverButton" android:background="#ffcccccc" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/no_thanks" />
</LinearLayout>