<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center" android:orientation="vertical" android:background="@drawable/bg_dialog" android:paddingTop="8.0dip" android:paddingBottom="8.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:paddingStart="15.0dip" android:paddingEnd="15.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <hazem.nurmontage.videoquran.views.TextCustumFont android:textSize="14.0sp" android:textStyle="bold" android:textColor="@color/white" android:id="@id/dialog_title" android:padding="8.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/exit" />
    <ImageView android:id="@id/img" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" />
    <ImageView android:layout_gravity="center" android:id="@id/img_pro" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/crown_24px" />
    <hazem.nurmontage.videoquran.views.TextCustumFont android:textSize="12.0sp" android:textColor="@color/white" android:id="@id/dialog_message" android:padding="5.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="8.0dip" android:text="@string/are_you_sure_want_to_leave_this_work" />
    <LinearLayout android:gravity="center" android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="8.0dip">
        <hazem.nurmontage.videoquran.views.ButtonCustumFont android:textSize="12.0sp" android:textColor="@color/white" android:id="@id/dialog_no" android:background="@drawable/btn_dialog" android:layout_width="100.0dip" android:layout_height="38.0dip" android:layout_margin="5.0dip" android:text="@string/leave" android:textAllCaps="false" />
        <hazem.nurmontage.videoquran.views.ButtonCustumFont android:textSize="12.0sp" android:textColor="@color/white" android:id="@id/dialog_yes" android:background="@drawable/btn_dialog_yes" android:layout_width="100.0dip" android:layout_height="38.0dip" android:layout_margin="5.0dip" android:text="@string/Continue" android:textAllCaps="false" />
    </LinearLayout>
</LinearLayout>