<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/main" android:background="#ff111114" android:padding="24.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <hazem.nurmontage.videoquran.views.TextCustumFontBold android:textSize="22.0sp" android:textStyle="bold" android:textColor="#ffffffff" android:layout_gravity="center" android:id="@id/tv_tittle" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/select_language" />
    <hazem.nurmontage.videoquran.views.TextCustumFont android:textSize="15.0sp" android:textColor="#ff74777f" android:layout_gravity="center" android:id="@id/tv_subTittle" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="4.0dip" android:text="@string/choose_your_preferred_language" />
    <RelativeLayout android:id="@id/layout_english" android:background="@drawable/bg_item_selected" android:padding="16.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="24.0dip">
        <hazem.nurmontage.videoquran.views.TextCustumFont android:textStyle="bold" android:textColor="#ffffffff" android:gravity="center" android:id="@id/icon_en" android:layout_width="40.0dip" android:layout_height="40.0dip" android:text="EN" />
        <ImageView android:id="@id/radio_english" android:background="@drawable/radio_selected" android:layout_width="20.0dip" android:layout_height="20.0dip" android:layout_centerVertical="true" android:layout_alignParentEnd="true" />
    </RelativeLayout>
    <RelativeLayout android:id="@id/layout_arabic" android:background="@drawable/bg_item_unselected" android:padding="16.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="12.0dip">
        <ImageView android:id="@id/radio_arabic" android:layout_width="20.0dip" android:layout_height="20.0dip" android:layout_centerVertical="true" android:layout_alignParentStart="true" />
        <hazem.nurmontage.videoquran.views.TextCustumFont android:textSize="18.0sp" android:textStyle="bold" android:textColor="@color/white" android:gravity="center" android:id="@id/icon_ar" android:layout_width="40.0dip" android:layout_height="40.0dip" android:text="ع" android:layout_alignParentEnd="true" />
    </RelativeLayout>
    <hazem.nurmontage.videoquran.views.ButtonCustumFont android:textSize="18.0sp" android:textStyle="bold" android:textColor="#ff0f0c03" android:id="@id/btn_confirm" android:layout_width="fill_parent" android:layout_height="56.0dip" android:layout_marginTop="32.0dip" android:text="@string/confirm" android:textAllCaps="false" android:backgroundTint="#fff4d853" />
    <hazem.nurmontage.videoquran.views.TextCustumFont android:textSize="16.0sp" android:textColor="#ff74777f" android:gravity="center" android:layout_gravity="center" android:id="@id/tv_cancel" android:padding="8.0dip" android:focusable="true" android:clickable="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:text="@string/cancel" />
</LinearLayout>