<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:gravity="top" android:orientation="vertical" android:background="#ff1c1c1e" android:focusable="true" android:clickable="true" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:orientation="horizontal" android:id="@id/view_time" android:paddingBottom="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_alignParentTop="true">
        <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/btn_from_the_start" android:background="@drawable/item_menu_focus" android:focusable="true" android:clickable="true" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0">
            <ImageView android:focusable="false" android:clickable="false" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="2.0dip" android:src="@drawable/skip_previous_24px" app:tint="@color/white" />
            <hazem.nurmontage.videoquran.views.TextCustumFont android:textSize="11.0sp" android:textColor="@color/white" android:id="@id/tv_from_the_start" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/from_the_start" />
        </LinearLayout>
        <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/btn_from_now" android:background="@drawable/item_menu_focus" android:focusable="true" android:clickable="true" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0">
            <ImageView android:id="@id/iv_from_now" android:focusable="false" android:clickable="false" android:layout_width="24.0dip" android:layout_height="24.0dip" android:layout_margin="2.0dip" android:src="@drawable/play_arrow_24px" android:rotation="180.0" app:tint="@color/white" />
            <hazem.nurmontage.videoquran.views.TextCustumFont android:textSize="11.0sp" android:textColor="@color/white" android:id="@id/tv_from_now" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/from_now" />
        </LinearLayout>
        <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/btn_until_now" android:background="@drawable/item_menu_focus" android:focusable="true" android:clickable="true" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0">
            <ImageView android:id="@id/iv_until_now" android:focusable="false" android:clickable="false" android:layout_width="24.0dip" android:layout_height="24.0dip" android:layout_margin="2.0dip" android:src="@drawable/play_arrow_24px" app:tint="@color/white" />
            <hazem.nurmontage.videoquran.views.TextCustumFont android:textSize="11.0sp" android:textColor="@color/white" android:id="@id/tv_until_now" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/until_now" />
        </LinearLayout>
        <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/btn_until_the_end" android:background="@drawable/item_menu_focus" android:focusable="true" android:clickable="true" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0">
            <ImageView android:focusable="false" android:clickable="false" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="2.0dip" android:src="@drawable/skip_previous_24px" android:rotation="180.0" app:tint="@color/white" />
            <hazem.nurmontage.videoquran.views.TextCustumFont android:textSize="11.0sp" android:textColor="@color/white" android:id="@id/tv_until_the_end" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/until_the_end" />
        </LinearLayout>
    </LinearLayout>
    <View android:id="@id/view" android:background="#ff808080" android:layout_width="fill_parent" android:layout_height="0.5dip" android:layout_marginBottom="2.0dip" android:layout_below="@id/view_time" />
    <HorizontalScrollView android:id="@id/scroll_menu" android:scrollbars="none" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_below="@id/view">
        <LinearLayout android:gravity="center" android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/btn_delete" android:background="@drawable/item_menu_focus" android:focusable="true" android:clickable="true" android:layout_width="@dimen/item_menu_entity_w" android:layout_height="@dimen/item_menu_entity_h">
                <ImageView android:focusable="false" android:clickable="false" android:layout_width="18.0dip" android:layout_height="18.0dip" android:layout_margin="2.0dip" android:src="@drawable/delete_24px" />
                <hazem.nurmontage.videoquran.views.TextCustumFont android:textSize="12.0sp" android:textColor="@color/white" android:id="@id/tv_delete" android:padding="3.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/delete" />
            </LinearLayout>
            <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/btn_anim" android:background="@drawable/item_menu_focus" android:focusable="true" android:clickable="true" android:layout_width="@dimen/item_menu_entity_w" android:layout_height="@dimen/item_menu_entity_h" android:layout_margin="@dimen/margin_item_menu">
                <ImageView android:focusable="false" android:clickable="false" android:layout_width="18.0dip" android:layout_height="18.0dip" android:layout_margin="2.0dip" android:src="@drawable/ic_animation" app:tint="@color/white" />
                <hazem.nurmontage.videoquran.views.TextCustumFont android:textSize="12.0sp" android:textColor="@color/white" android:id="@id/tv_anim" android:padding="3.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/animtion" />
            </LinearLayout>
            <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/btn_cut" android:background="@drawable/item_menu_focus" android:focusable="true" android:clickable="true" android:layout_width="@dimen/item_menu_entity_w" android:layout_height="@dimen/item_menu_entity_h" android:layout_margin="@dimen/margin_item_menu">
                <ImageView android:id="@id/iv_cut" android:focusable="false" android:clickable="false" android:layout_width="18.0dip" android:layout_height="18.0dip" android:layout_margin="2.0dip" android:src="@drawable/content_cut_24px" app:tint="@color/white" />
                <hazem.nurmontage.videoquran.views.TextCustumFont android:textSize="12.0sp" android:textColor="@color/white" android:id="@id/tv_cut" android:padding="3.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/cut" />
            </LinearLayout>
            <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/btn_edit" android:background="@drawable/item_menu_focus" android:focusable="true" android:clickable="true" android:layout_width="@dimen/item_menu_entity_w" android:layout_height="@dimen/item_menu_entity_h" android:layout_margin="@dimen/margin_item_menu">
                <ImageView android:focusable="false" android:clickable="false" android:layout_width="18.0dip" android:layout_height="18.0dip" android:layout_margin="2.0dip" android:src="@drawable/edit_24px" app:tint="#ff8cd279" />
                <hazem.nurmontage.videoquran.views.TextCustumFont android:textSize="12.0sp" android:textColor="@color/white" android:id="@id/tv_edit" android:padding="3.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/edit" />
            </LinearLayout>
            <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/btn_color" android:background="@drawable/item_menu_focus" android:focusable="true" android:clickable="true" android:layout_width="@dimen/item_menu_entity_w" android:layout_height="@dimen/item_menu_entity_h" android:layout_margin="@dimen/margin_item_menu">
                <ImageView android:focusable="false" android:clickable="false" android:layout_width="18.0dip" android:layout_height="18.0dip" android:layout_margin="2.0dip" android:src="@drawable/ic_palette_color" app:tint="#ff8cd279" />
                <hazem.nurmontage.videoquran.views.TextCustumFont android:textSize="12.0sp" android:textColor="@color/white" android:id="@id/tv_color" android:padding="3.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/color" />
            </LinearLayout>
            <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/btn_duplicate" android:background="@drawable/item_menu_focus" android:focusable="true" android:clickable="true" android:layout_width="@dimen/item_menu_entity_w" android:layout_height="@dimen/item_menu_entity_h" android:layout_margin="@dimen/margin_item_menu">
                <ImageView android:focusable="false" android:clickable="false" android:layout_width="18.0dip" android:layout_height="18.0dip" android:layout_margin="2.0dip" android:src="@drawable/iv_dublicate" app:tint="@color/white" />
                <hazem.nurmontage.videoquran.views.TextCustumFont android:textSize="12.0sp" android:textColor="@color/white" android:id="@id/tv_duplicate" android:padding="3.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/duplicate" />
            </LinearLayout>
            <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/btn_font" android:background="@drawable/item_menu_focus" android:focusable="true" android:clickable="true" android:layout_width="@dimen/item_menu_entity_w" android:layout_height="@dimen/item_menu_entity_h" android:layout_margin="@dimen/margin_item_menu">
                <ImageView android:focusable="false" android:clickable="false" android:layout_width="18.0dip" android:layout_height="18.0dip" android:layout_margin="2.0dip" android:src="@drawable/ic_font" app:tint="@color/white" />
                <hazem.nurmontage.videoquran.views.TextCustumFont android:textSize="12.0sp" android:textColor="@color/white" android:id="@id/tv_font" android:padding="3.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/font" />
            </LinearLayout>
            <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/btn_icon" android:background="@drawable/item_menu_focus" android:focusable="true" android:clickable="true" android:layout_width="@dimen/item_menu_entity_w" android:layout_height="@dimen/item_menu_entity_h" android:layout_margin="@dimen/margin_item_menu">
                <ImageView android:id="@id/iv_icon" android:focusable="false" android:clickable="false" android:layout_width="18.0dip" android:layout_height="18.0dip" android:layout_margin="2.0dip" android:src="@drawable/shamerli_icon" app:tint="@color/white" />
                <hazem.nurmontage.videoquran.views.TextCustumFont android:textSize="12.0sp" android:textColor="@color/white" android:id="@id/tv_icon" android:padding="3.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/icon" />
            </LinearLayout>
        </LinearLayout>
    </HorizontalScrollView>
    <ImageView android:id="@id/btn_show_left" android:visibility="gone" android:layout_width="15.0dip" android:layout_height="15.0dip" android:layout_marginBottom="20.0dip" android:src="@drawable/btn_on_back" android:layout_alignBottom="@id/scroll_menu" android:layout_alignParentLeft="true" android:layout_alignParentStart="true" app:tint="#ffffffff" />
    <ImageView android:id="@id/btn_show_right" android:layout_width="15.0dip" android:layout_height="15.0dip" android:layout_marginBottom="20.0dip" android:src="@drawable/btn_on_back" android:layout_alignBottom="@id/scroll_menu" android:layout_alignParentRight="true" android:rotation="180.0" android:layout_alignParentEnd="true" app:tint="#ffffffff" />
</RelativeLayout>