<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@drawable/bg_dialog" android:paddingTop="8.0dip" android:paddingBottom="8.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:paddingStart="15.0dip" android:paddingEnd="15.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
        <ImageButton android:layout_gravity="start" android:id="@id/dialog_no" android:background="@color/transparent" android:padding="8.0dip" android:layout_width="40.0dip" android:layout_height="40.0dip" android:src="@drawable/close_24px" android:scaleType="centerInside" android:layout_alignParentLeft="true" android:layout_centerInParent="true" android:layout_alignParentStart="true" app:tint="#ffeeeeee" />
        <Button android:textSize="13.0sp" android:textColor="#ffffffff" android:id="@id/contact_us" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/contact_us" android:layout_alignParentRight="true" android:layout_centerInParent="true" android:textAllCaps="false" android:layout_alignParentEnd="true" android:backgroundTint="#0021262d" app:cornerRadius="100.0dip" />
    </RelativeLayout>
    <LinearLayout android:layout_gravity="center" android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content">
        <ImageView android:layout_width="50.0dip" android:layout_height="50.0dip" android:src="@drawable/crown_24px" android:rotation="-10.0" app:tint="#ff808080" />
        <ImageView android:layout_width="24.0dip" android:layout_height="24.0dip" android:src="@drawable/error_24px" android:translationY="-15.0dip" app:tint="#ff808080" />
    </LinearLayout>
    <hazem.nurmontage.videoquran.views.TextCustumFontBold android:textSize="15.0sp" android:textStyle="bold" android:textColor="@color/white" android:layout_gravity="center" android:id="@id/dialog_title" android:padding="8.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/nothing_to_restore" />
    <hazem.nurmontage.videoquran.views.TextCustumFont android:textSize="11.5sp" android:textColor="#ffefefef" android:gravity="center" android:layout_gravity="center" android:id="@id/tv_msj" android:padding="8.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="5.0dip" android:text="@string/msj_no_found_subscribe" />
</LinearLayout>